Needs fixed - tying dark mode of app to dark mode of landing page

--- a/tipit-react/public/style.css
+++ b/tipit-react/public/style.css
@@ -80,7 +80,7 @@ h1 {
 }
 
 .footer {
-  position: absolute;
+  position: fixed;
   right: 0;
   bottom: 0;
   left: 0;
@@ -132,7 +132,7 @@ h1 {
   clear: both;
 }
 
-.toggle-input {
+input.toggle-input {
   cursor: pointer;
   position: absolute;
 	display: block;
