--- a/tipit-react/src/theme/appstyles.module.css
+++ b/tipit-react/src/theme/appstyles.module.css
@@ -1,10 +1,10 @@
-html { 
-    height:100%; 
+html {
+    height:100%;
 }
-.body { 
-    position: absolute;  
+.body {
+    position: absolute;
     top: 0;
-    right: 0; 
+    right: 0;
     left: 0;
     margin: 0;
     padding: 0;
@@ -76,7 +76,6 @@ input {
     border: 1px solid lightgray;
     border-radius: 3px;
     height: 43px;
-    max-width: 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -110,7 +109,7 @@ tr:hover{
 }
 
 tr:nth-child(even) {
-    background-color: #f2f2f2; 
+    background-color: #f2f2f2;
     color: black;
 }
 
